# fastapi-rev

./: alembic.ini  main.py  my_requests.py  pyproject.toml  test_main.http
alembic/versions/: 6dae5db0cd64_.py
api/: courses.py  sections.py  users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
