[tool.poetry]
name = "crash-course"
version = "0.1.0"
description = ""
authors = ["madlover540 <abdullah@kmmrce.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
